--- a/src/Hunter/noTeam.form
+++ b/src/Hunter/noTeam.form
@@ -2,9 +2,11 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Hunter.noTeam">
   <grid id="27dc6" binding="mainWindow" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="515" height="400"/>
+      <xy x="20" y="20" width="488" height="390"/>
     </constraints>
-    <properties/>
+    <properties>
+      <preferredSize width="400" height="550"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="20aa1" class="javax.swing.JList" binding="teamList">
@@ -18,7 +20,7 @@
       </component>
       <component id="27e1f" class="javax.swing.JButton" binding="joinTeamButton">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -27,7 +29,7 @@
       </component>
       <grid id="ce98b" binding="infoArea" layout-manager="GridBagLayout">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
           <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties/>
@@ -58,6 +60,33 @@
             </constraints>
             <properties>
               <text value="Team Captain:"/>
+            </properties>
+          </component>
+          <component id="a6708" class="javax.swing.JLabel" binding="teamRank">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="&lt;Team Rank&gt;"/>
+            </properties>
+          </component>
+          <component id="6e3d5" class="javax.swing.JLabel" binding="teamName">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="&lt;Team Name&gt;"/>
+            </properties>
+          </component>
+          <component id="f1557" class="javax.swing.JLabel" binding="teamCaptain">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <text value="&lt;Team captain&gt;"/>
             </properties>
           </component>
         </children>
