--- a/src/MissionHolder/MissionStats.form
+++ b/src/MissionHolder/MissionStats.form
@@ -341,6 +341,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Manage"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mManageMissionButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
